--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "laravel/framework": "^10.23",
     "laravel/sanctum": "^3.2",
     "laravel/tinker": "^2.8",
+    "livewire/livewire": "^3.5",
     "yaza/laravel-repository-service": "^4.0"
   },
   "require-dev": {
